--- a/W11.Rmd
+++ b/W11.Rmd
@@ -16,4 +16,43 @@ source("W11-1.R")
 
 ```{r}   
 mm(7,8,678)  
+```  
+
+```{r}  
+x1<-runif(3)
+x2<-runif(3)
+x3<-runif(3)
+x<-list(x1,x2,x3)  
+length(x)  #  3個長度
+xx<-c(x1,x2,x3)
+length(xx)  #  9個長度  
+yy<-function(x)  #  取出值大於0.5的元素
+  return(length(x[x>0.5])
+         )
+yy(runif(10))
+```  
+
+```{r}  
+x1<-list(c("a","b"),c("c","d"))  
+x<-x1[[1]]  
+for(item in x ){
+  print(item)  
+}  
+print("---------")  
+x<-x1[1]  
+for(item in x ){
+  print(item)  
+}
+```         
+```{r}
+A<-function(Afile){
+}
+dir(path="C:\W11\W11")
 ```
+
+
+
+
+
+
+         
